limpiando código